--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,14 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["babel-plugin-styled-components"]
-  // "plugins": [["babel-plugin-styled-components", { "ssr": false }]]
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true
+        // "fileName": true,
+        // "displayName": true,
+        // "pure": true
+      }
+    ]
+  ]
 }
