--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "vercel-deploy": "next build && next export"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "next": "12.2.3",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.3",
+    "react-redux": "^8.0.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3"
   }
