--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
