--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 name=DEVELOPMENT
 NEXT_PUBLIC_API_URL=http://makeup-api.herokuapp.com/api/v1/products.json?brand=maybelline
 apiUrl=http://makeup-api.herokuapp.com/api/v1/products.json?brand=maybelline
+
+// .env.development
+NEXTAUTH_SECRET=mysecret123
