--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.3",
+    "next-auth": "^4.19.2",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,8 +25,10 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "typescript": "^4.9.5"
   }
 }
