next-auth : in production, next-auth secret key

--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,6 @@ apiUrl=http://makeup-api.herokuapp.com/api/v1/products.json?brand=dior
 
 // Browser
 // process.env.NEXT_PUBLIC_변수명
+
+// next-auth secret key
+NEXTAUTH_SECRET=test
