--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ NEXT_PUBLIC_API_URL=http://makeup-api.herokuapp.com/api/v1/products.json?brand=m
 apiUrl=http://makeup-api.herokuapp.com/api/v1/products.json?brand=maybelline
 
 // .env.development
-NEXTAUTH_SECRET=mysecret123
+NEXTAUTH_SECRET=test
