--- a/.env.production
+++ b/.env.production
@@ -9,4 +9,4 @@ apiUrl=http://makeup-api.herokuapp.com/api/v1/products.json?brand=dior
 // process.env.NEXT_PUBLIC_변수명
 
 // next-auth secret key
-NEXTAUTH_SECRET=test
+NEXTAUTH_SECRET=a47153e768c2266200fae2a6ef1f0de8
