--- a/.env.production
+++ b/.env.production
@@ -9,4 +9,5 @@ apiUrl=http://makeup-api.herokuapp.com/api/v1/products.json?brand=dior
 // process.env.NEXT_PUBLIC_변수명
 
 // next-auth secret key
+NEXTAUTH_URL=https://next-app-1-mu.vercel.app/
 NEXTAUTH_SECRET=a47153e768c2266200fae2a6ef1f0de8
